issue #1: Add style to align cells when long dropdown in awdb-select; Filter awdb-select options for polygons only

--- a/webroot/css/base.css
+++ b/webroot/css/base.css
@@ -188,3 +188,7 @@ input[type="radio"], input[type="checkbox"] {
 .thead-inverse th {
   background-color: #4f4f4f;
 }
+
+th.pourpoint-table {
+  width:20%
+}
